# src/modules/auth/dto/responses.ts
@@ -1,3 +1,4 @@
+import { UserResponse } from 'src/modules/user/dto';
 import { tags } from 'typia';
 
 export interface AuthSignupResponse {
@@ -5,20 +6,8 @@ export interface AuthSignupResponse {
   userId: string & tags.MinLength<1>;
 }
 
-export interface AuthLoginResponseUser {
-  id: string & tags.MinLength<1>;
-  firstName: string;
-  lastName: string;
-  email: string & tags.Format<'email'>;
-  role: 'student' | 'admin';
-  isEmailVerified: boolean;
-  avatarURL?: string;
-}
-
 export interface AuthLoginResponse {
   accessToken: string & tags.MinLength<1>;
   refreshToken: string & tags.MinLength<1>;
-  user: AuthLoginResponseUser;
+  user: UserResponse;
 }
-
-export type EmptyResponse = Record<string, never>;
