# src/modules/user/dto/response.ts
@@ -1,0 +1,3 @@
+import { User } from '@prisma/client';
+
+export type UserResponse = Omit<User, 'password'>;
